--- a/ShareFolderProgramm/ShareFolderProgramm/View/MainWindow.xaml
+++ b/ShareFolderProgramm/ShareFolderProgramm/View/MainWindow.xaml
@@ -23,15 +23,17 @@
                         <RowDefinition Height="2*"/>
                     </Grid.RowDefinitions>
 
-                    <Label Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <Label Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"
+                          >
                         File batch
                     </Label>
                     <ListBox Grid.Row="1" ItemsSource="{Binding FileNames}"
+                             Margin="5"
                              SelectionMode="Multiple"
                              Name="listBox">
                     </ListBox>
                     <StackPanel Grid.Row="2" Orientation="Horizontal">
-                        <Button VerticalAlignment="Center" Margin="33,0,0,0"
+                        <Button VerticalAlignment="Center" Margin="25,0,0,0"
                                 Command="{Binding AddFilesCommand}">
                             Add files
                         </Button>
